hopefully fix spacing

--- a/source/css/solarized.css
+++ b/source/css/solarized.css
@@ -53,10 +53,10 @@ li a:hover {
 
 p {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 5em;
+    padding-right: 5em;
 }
 
 .footnotes {
-    padding-top: 12em;
+    margin-top: 12em;
 }
